﻿===v6.0.4===
 * The Buff Efficiency Threshold setting is back.
 * Changed all file encodings to UTF-8 in hopes of fixing the problems that many users are having.
 * Bug fixes:
 ** Minimum group frame level is now 5 instead of 1 to prevent issues caused at low frame levels.
 ** Increased the delay on LoadFirstValidIcon from 0.1 seconds to 0.5 seconds in hopes of preventing the AceCD:804 error more often.
 ** Soul shard condition maximum has been increased to 4 (from 3).
 
===v6.0.3===
 * Re-implemented the stance condition for paladin seals.
 * Minor updates for some buff/debuff equivalancies. Still need help getting these completely up to date, though! If you notice something missing, please let me know!
 * You can now change the event of an event handler once it has been created.
 * New setting for Combat Event icons - Don't Refresh.
 * Added Raid Finder to the Instance Type condition.
 * You can now output text to the UI Errors Frame.
 * Moved the Timers ignore GCD & Bars ignore GCD settings from per-profile to per-icon.
 * Updated Unit Cooldown icons for all cooldown resets in MoP.
 * DR categories should now be complete for MoP. Please report any missing spells.
 * You can once again toggle config mode in combat. You may still get script ran too long errors if TellMeWhen_Options has not been loaded yet and you unlock in combat,  but it won't break anything.
 * You can now reorder groups.
 * Added a setting to make colors ignore the GCD. It is enabled by default.
 * Added center text as a default text layout.
 * New condition: Unit is Player.
 * Unit conditions now allow Lua conditions.
 * Unit conditions now allow you to track the target of the icon's units.
 * Bug fixes:
 ** Fixed static formats again (ICONMENU_MULTISTATECD_DESC)
 ** (Condition ROLE): attempt to index global "roles" (a nil value)
 ** Buff/debuff duration sorting actually works now!
 ** TellMeWhen_Options.lua:3351: attempt to index local "settingsUsedByEvent" (a nil value)